--- a/High Roller/Base.lproj/Main.storyboard
+++ b/High Roller/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A319" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11201"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11198.2"/>
         <capability name="box content view" minToolsVersion="7.0"/>
         <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
         <capability name="system font weights other than Regular or Bold" minToolsVersion="7.0"/>
@@ -144,10 +144,10 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <stackView distribution="fill" orientation="vertical" alignment="trailing" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="40L-oh-9lc">
-                                <rect key="frame" x="109" y="328" width="263" height="52"/>
+                                <rect key="frame" x="109" y="329" width="263" height="51"/>
                                 <subviews>
                                     <stackView distribution="fill" orientation="horizontal" alignment="centerY" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tk3-6t-NFR">
-                                        <rect key="frame" x="0.0" y="29" width="263" height="23"/>
+                                        <rect key="frame" x="0.0" y="29" width="263" height="22"/>
                                         <subviews>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Er4-gq-Vkv">
                                                 <rect key="frame" x="-2" y="3" width="183" height="17"/>
@@ -158,7 +158,7 @@
                                                 </textFieldCell>
                                             </textField>
                                             <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hBo-yE-y3q">
-                                                <rect key="frame" x="187" y="1" width="55" height="22"/>
+                                                <rect key="frame" x="187" y="0.0" width="55" height="22"/>
                                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="right" title="2" drawsBackground="YES" id="iyM-Pd-ejp">
                                                     <font key="font" metaFont="system"/>
                                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -169,7 +169,7 @@
                                                 </connections>
                                             </textField>
                                             <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ROY-IR-j7r">
-                                                <rect key="frame" x="247" y="-2" width="19" height="27"/>
+                                                <rect key="frame" x="247" y="-3" width="19" height="27"/>
                                                 <stepperCell key="cell" continuous="YES" alignment="left" minValue="1" maxValue="20" doubleValue="2" id="VAQ-ZY-ahz"/>
                                                 <connections>
                                                     <action selector="numberOfDiceStepperChanged:" target="XfG-lQ-9wD" id="eoB-Hh-OAq"/>
@@ -254,7 +254,7 @@
                                 </customSpacing>
                             </stackView>
                             <box autoresizesSubviews="NO" boxType="secondary" borderType="line" title="Box" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="SoN-Yu-Vhy">
-                                <rect key="frame" x="17" y="237" width="446" height="76"/>
+                                <rect key="frame" x="17" y="238" width="446" height="76"/>
                                 <view key="contentView" id="XVi-xO-AjE">
                                     <rect key="frame" x="1" y="1" width="444" height="74"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -276,16 +276,16 @@
                                 </constraints>
                             </box>
                             <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FGh-S3-sgR">
-                                <rect key="frame" x="20" y="105" width="440" height="120"/>
+                                <rect key="frame" x="20" y="105" width="440" height="121"/>
                                 <clipView key="contentView" id="xEy-Oz-3PJ">
-                                    <rect key="frame" x="1" y="1" width="423" height="118"/>
+                                    <rect key="frame" x="1" y="1" width="438" height="119"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView editable="NO" importsGraphics="NO" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="mqD-Mo-ukV">
-                                            <rect key="frame" x="0.0" y="0.0" width="423" height="118"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="438" height="119"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <size key="minSize" width="423" height="118"/>
+                                            <size key="minSize" width="438" height="119"/>
                                             <size key="maxSize" width="463" height="10000000"/>
                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                         </textView>
@@ -300,7 +300,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="cd9-Y5-FV4">
-                                    <rect key="frame" x="424" y="1" width="15" height="118"/>
+                                    <rect key="frame" x="423" y="1" width="16" height="119"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
@@ -329,7 +329,7 @@
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="getRollDataFromWebButtonClicked:" target="XfG-lQ-9wD" id="esG-iR-FmV"/>
+                                    <action selector="getRollDataFromWebButtonClicked:" target="XfG-lQ-9wD" id="6PO-BA-XG5"/>
                                 </connections>
                             </button>
                         </subviews>
